# monkey-type-bot

./: Cargo.toml  README.md
src/: gen.rs  main.rs  rng.rs  translate.rs
