[package]
name = "monkey-type-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", default-features = false, features = [ "macros", ] }
teloxide = { version = "0.15.0", default-features = false, features = [ "default" ] }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, features = [ "humantime" ] }

[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
